[package]
name = "cargo-coverage-annotations"
version = "0.1.2"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
description = "Ensure annotations in code match actual coverage."
repository = "https://github.com/orenbenkiki/cargo-coverage-annotations"
readme = "README.md"
keywords = ["cargo", "git", "subcommand", "build"]
categories =[ "development-tools::build-utils", "development-tools::cargo-plugins"]
license = "GPL-3.0"

[dependencies]
version = "^2.0.1"
xml-rs = "^0.7.0"
