[package]
edition = "2021"
name = "cargo-coverage-annotations"
version = "0.4.3-dev"
authors = ["Oren Ben-Kiki <oren@ben-kiki.org>"]
description = "Ensure annotations in code match actual coverage."
repository = "https://github.com/orenbenkiki/cargo-coverage-annotations"
readme = "README.md"
keywords = ["cargo", "git", "subcommand", "build"]
categories =[ "development-tools::build-utils", "development-tools::cargo-plugins"]
license = "GPL-3.0"

[badges.travis-ci]
repository = "orenbenkiki/cargo-coverage-annotations"

[dependencies]
regex = "^1.5.5"
xml-rs = "^0.8.4"
